--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
+    "dotenv": "^16.0.3",
     "eslint": "^8.31.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "tsc": "^2.0.4",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
