--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch 'src/' --exec 'ts-node src/server.ts' -e ts"
+    "start:dev": "nodemon --watch 'src/' --exec 'ts-node src/server.ts' -e ts"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +18,7 @@
     "eslint": "^8.31.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "tsc": "^2.0.4",
-    "typescript": "^4.9.4"
+    "tsc": "^2.0.4"
   },
   "dependencies": {
     "express": "^4.18.2"
