--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tsc": "^2.0.4"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^4.13.0"
   }
 }
