--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "tsc": "^2.0.4"
   },
   "dependencies": {
+    "@types/swagger-ui-express": "^4.1.3",
     "express": "^4.18.2",
-    "mongodb": "^4.13.0"
+    "mongodb": "^4.13.0",
+    "swagger-ui-express": "^4.6.0"
   }
 }
