--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "jest ",
     "start:dev": "nodemon --watch 'src/' --exec 'ts-node src/server.ts' -e ts"
   },
   "keywords": [],
@@ -11,13 +12,17 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
+    "@types/uuid": "^9.0.0",
     "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.31.0",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "tsc": "^2.0.4"
   },
@@ -26,6 +31,7 @@
     "express": "^4.18.2",
     "mongodb": "^4.13.0",
     "swagger-ui-express": "^4.6.0",
+    "uuid": "^9.0.0",
     "validator": "^13.7.0"
   }
 }
